# dashboard-data-covid19

./: .gitignore  dashboard.py  database.py  pyproject.toml
assets/: style.css
etl/: transform.py
ingestao/: ingestion.py
utils/: extract_file.py  get_element_selenium.py  load_file_json.py  main.py
