[tool.taskipy.tasks]
run = "python dashboard.py"

[tool.poetry]
name = "dashboard-covid19"
version = "0.1.0"
description = ""
authors = ["Breno Mendes <b.mendesbernardo2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.19.0"
dash = "^2.16.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-bootstrap-components = "^1.6.0"
plotly = "^5.21.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
duckdb = "^0.10.2"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
